<resources>
    <string name="app_name">Calculadora</string>
    <string name="num1"> Digite o primeiro número</string>
    <string name="num2"> Digite o segundo número</string>
    <string name="btnadicao"> Adição </string>
    <string name="btnsub"> Subtração </string>
    <string name="btnmult"> Multiplicação </string>
    <string name="btndiv"> Divisão  </string>
    <string name="result"> Resultado:   </string>
</resources>