<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Tela1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="417dp"
        android:layout_height="51dp"
        android:layout_marginTop="-25dp"
        android:layout_marginBottom="718dp"
        android:background="#493073"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="433dp"
        android:layout_height="36dp"
        android:layout_marginTop="697dp"
        android:layout_marginBottom="-25dp"
        android:background="#493073"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"></LinearLayout>

    <EditText
        android:id="@+id/num1"
        android:layout_width="224dp"
        android:layout_height="56dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="-30dp"
        android:ems="10"
        android:hint="@string/num1"
        android:inputType="text"
        android:numeric="decimal"
        app:layout_constraintBottom_toTopOf="@+id/num2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="224dp"
        android:layout_height="56dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="95dp"
        android:ems="10"
        android:hint="@string/num2"
        android:inputType="text"
        android:numeric="decimal"
        app:layout_constraintBottom_toTopOf="@+id/btnadicao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <Button
        android:id="@+id/btnadicao"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="#6238B1"
        android:fontFamily="sans-serif-black"
        android:numeric="signed|integer|decimal"
        android:text="@string/btnadicao"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnmult"
        app:layout_constraintEnd_toStartOf="@+id/btnsub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <Button
        android:id="@+id/btnsub"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="#6238B1"
        android:fontFamily="sans-serif-black"
        android:numeric="signed|integer|decimal"
        android:text="@string/btnsub"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btndiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnadicao"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <Button
        android:id="@+id/btnmult"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="77dp"
        android:backgroundTint="#6238B1"
        android:fontFamily="sans-serif-black"
        android:numeric="signed|integer|decimal"
        android:text="@string/btnmult"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toStartOf="@+id/btndiv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnadicao" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="75dp"
        android:backgroundTint="#6238B1"
        android:fontFamily="sans-serif-black"
        android:numeric="signed|integer|decimal"
        android:text="@string/btndiv"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnmult"
        app:layout_constraintTop_toBottomOf="@+id/btnsub" />

    <TextView
        android:id="@+id/result"
        android:layout_width="198dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="53dp"
        android:text="@string/result"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmult" />

</androidx.constraintlayout.widget.ConstraintLayout>